--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "build": "webpack",
     "start": "yarn build && http-server dist -a 127.0.0.1 -p 8888"
   },
-  "dependencies": {},
+  "dependencies": {
+    "d3": "^5.5.0",
+    "http-server": "^0.11.1"
+  },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "http-server": "^0.11.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^3.11.0"
   }
