--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hack": "webpack-dev-server --hot"
   },
   "dependencies": {
+    "chroma-js": "^1.3.7",
     "d3": "^5.5.0",
     "http-server": "^0.11.1"
   },
@@ -19,8 +20,11 @@
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "css-loader": "^1.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.22.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.9.1"
