feat: add logo and css

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "webpack",
     "start": "yarn build && http-server dist -a 127.0.0.1 -p 8888",
-    "hack": "webpack-dev-server --hot"
+    "hack": "webpack-dev-server --hot --open"
   },
   "dependencies": {
     "chroma-js": "^1.3.7",
