--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "yarn build && http-server dist -a 127.0.0.1 -p 8888",
+    "start": "http-server dist -a 127.0.0.1 -p 8888",
     "hack": "webpack-dev-server --hot --open",
-    "heroku-postbuild": "build"
+    "heroku-postbuild": "yarn build"
   },
   "dependencies": {
     "chroma-js": "^1.3.7",
