--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack",
-    "start": "http-server dist -a 127.0.0.1 -p 8888",
-    "hack": "webpack-dev-server --hot --open",
+    "start": "http-server dist",
+    "local:start": "http-server dist -a 127.0.0.1 -p 8888",
+    "local:hack": "webpack-dev-server --hot --open",
     "heroku-postbuild": "yarn build"
   },
   "dependencies": {
